	__contains__,  __len__, __mod__, __rmod__, __mul__, __rmod__, __rmul__, expandtabs, translate, decode, encode, splitlines, capitalize, swapcase, title, isalnum, isalpha, isdigit, isspace, istitle, zfill
removed Smart Layout Creator in favor of 'with' statement support
DagNode.getParent() no longer accepts keyword arguments
Renamed UI base class to PyUI

FEATURES

added support for creation of class-based python Attribute Editor templates, using ui.AETemplate.
added support for attribute aliases:
	DependNode.attr() now casts aliases to Attributes properly (PyNode already does)
	added DependNode.listAliases()
	added 'alias' keyword to DependNode.listAttr()
	added Attribute.setAlias(), Attribute.getAlias()
added 'with statement' compatibility to UI Layout and Menu classes
added the ability to generate completion files for IDEs like Wing, Eclipse, and Komodo
added regex flag to ls command


TOOLS

ipymel: added colorization to dag command
py2mel: now works with lambdas and methods.  new option to provide a list or dictionary of mel types.
re-added missing scriptEditor files


INSTALLATION

added a pre-made .pth file for users to use during install
added upgradeScripts, a tool for converting 0.9 scripts to be 1.0 compatible


CHANGES AND ADDITIONS

added TwoWayDict/EquivalencePair to utilityTypes
added preorder, postorder, and breadth functions in util.arguments, which have more intuitive arguments
moved functions for working with the shell into util.shell
split out ui classes from core.windows into core.uitypes for lazy loading
for versions >= 2009, use open/close undo chunks instead of mel hack to ensure that an entire callback can be undone in one go
added new Layout class that all layouts inherit from
improved lsUI
added UITemplate class
cast modelEditor camera query to PyNode
cast dimensionShape
moved component types out of nodetypes and into general